Modify time prototype html

--- a/public/prototype/time.html
+++ b/public/prototype/time.html
@@ -8,233 +8,115 @@
   <body>
     <main>
       <div class="contents">
-        <div class="table">
-          <div class="headerColumn">
-            <div class="headerCell">
-              <div>
-                <span></span>
-              </div>
+
+        <div class="topContents">
+        </div> <!-- topContents -->
+
+        <div class="bottomContents">
+
+          <div class="header record">
+            <div class="titleCell">
+              <span></span>
             </div>
-            <div class="lapCountCell">
-              <div>
-                <span>LAP</span>
-              </div>
+            <div class-"lapCell">
+              <span>LAP</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>SECTOR 1</span>
-              </div>
+            <div class="timeCell">
+              <span>SECTOR1</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>SECTOR 2</span>
-              </div>
+            <div class="timeCell">
+              <span>SECTOR2</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>SECTOR 3</span>
-              </div>
+            <div class="timeCell">
+              <span>SECTOR3</span>
             </div>
-            <div class="lapTimeCell">
-              <div>
-                <span>LAP TIME</span>
-              </div>
+            <div class="timeCell">
+              <span>LAP TIME</span>
             </div>
-          </div> <!-- column  -->
-          <div class="bodyColumn">
-            <div class="headerCell">
-              <div>
-                <span>CURRENT</span>
-              </div>
+            <div class="deltaCell">
+              <span>DELTA</span>
             </div>
-            <div class="lapCountCell">
-              <div>
-                <span>8</span>
-              </div>
+          </div> <!--header -->
+
+          <div class="current record">
+            <div class="titleCell">
+              <span>CURRENT</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class-"lapCell">
+              <span>888</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-            <div class="lapTimeCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-          </div> <!-- column  -->
-          <div class="bodyColumn">
-            <div class="headerCell">
-              <div>
-                <span>History1</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-            <div class="lapCountCell">
-              <div>
-                <span>88</span>
-              </div>
+            <div class="deltaCell">
+              <span>+88:88.888</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+          </div> <!-- current -->
+
+          <!-- <div class="timeLogTable"> -->
+          <!-- </div> -->
+
+          <div class="fastest record">
+            <div class="titleCell">
+              <span>FASTEST</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class-"lapCell">
+              <span>888</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-            <div class="lapTimeCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-          </div> <!-- column  -->
-          <div class="bodyColumn">
-            <div class="headerCell">
-              <div>
-                <span>History2</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-            <div class="lapCountCell">
-              <div>
-                <span>888</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class="deltaCell">
+              <span>--:--.--</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+          </div> <!-- fastest -->
+
+          <div class="average record">
+            <div class="titleCell">
+              <span>AVERAGE</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class-"lapCell">
+              <span>---</span>
             </div>
-            <div class="lapTimeCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-          </div> <!-- column  -->
-          <div class="bodyColumn">
-            <div class="headerCell">
-              <div>
-                <span>History3</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-            <div class="lapCountCell">
-              <div>
-                <span>888</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class="timeCell">
+              <span>88:88.888</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
+            <div class="deltaCell">
+              <span>--:--.--</span>
             </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-            <div class="lapTimeCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-          </div> <!-- column  -->
-          <div class="bodyColumn">
-            <div class="headerCell">
-              <div>
-                <span>BEST</span>
-              </div>
-            </div>
-            <div class="lapCountCell">
-              <div>
-                <span>888</span>
-              </div>
-            </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-            <div class="lapTimeCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-          </div> <!-- column  -->
-          <div class="bodyColumn">
-            <div class="headerCell">
-              <div>
-                <span>AVERAGE</span>
-              </div>
-            </div>
-            <div class="lapCountCell">
-              <div>
-                <span>---</span>
-              </div>
-            </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-            <div class="sectorCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-            <div class="lapTimeCell">
-              <div>
-                <span>00:00.000</span>
-              </div>
-            </div>
-          </div> <!-- column  -->
-        </div>
-      </div>
+          </div> <!-- average -->
+
+        </div> <!-- bottomContents -->
+
+      </div> <!--contents -->
+
     </main>
   </body>
 </html>
