Modify implemation fixed record on time prototype

--- a/public/prototype/time.html
+++ b/public/prototype/time.html
@@ -10,39 +10,36 @@
       <div class="contents">
 
         <div class="topContents">
-        </div> <!-- topContents -->
 
-        <div class="bottomContents">
-
-          <div class="header record">
-            <div class="titleCell">
+          <div class="header">
+            <div class="titleHeader">
               <span></span>
             </div>
-            <div class-"lapCell">
+            <div class="lapHeader">
               <span>LAP</span>
             </div>
-            <div class="timeCell">
+            <div class="timeHeader">
               <span>SECTOR1</span>
             </div>
-            <div class="timeCell">
+            <div class="timeHeader">
               <span>SECTOR2</span>
             </div>
-            <div class="timeCell">
+            <div class="timeHeader">
               <span>SECTOR3</span>
             </div>
-            <div class="timeCell">
+            <div class="timeHeader">
               <span>LAP TIME</span>
             </div>
-            <div class="deltaCell">
+            <div class="deltaHeader">
               <span>DELTA</span>
             </div>
           </div> <!--header -->
 
-          <div class="current record">
+          <div class="current darkRecord">
             <div class="titleCell">
               <span>CURRENT</span>
             </div>
-            <div class-"lapCell">
+            <div class="lapCell">
               <span>888</span>
             </div>
             <div class="timeCell">
@@ -57,7 +54,7 @@
             <div class="timeCell">
               <span>88:88.888</span>
             </div>
-            <div class="deltaCell">
+            <div class="evenDeltaCell">
               <span>+88:88.888</span>
             </div>
           </div> <!-- current -->
@@ -65,11 +62,11 @@
           <!-- <div class="timeLogTable"> -->
           <!-- </div> -->
 
-          <div class="fastest record">
+          <div class="fastest darkRecord">
             <div class="titleCell">
               <span>FASTEST</span>
             </div>
-            <div class-"lapCell">
+            <div class="lapCell">
               <span>888</span>
             </div>
             <div class="timeCell">
@@ -84,16 +81,16 @@
             <div class="timeCell">
               <span>88:88.888</span>
             </div>
-            <div class="deltaCell">
-              <span>--:--.--</span>
+            <div class="evenDeltaCell">
+              <span>--:--.---</span>
             </div>
           </div> <!-- fastest -->
 
-          <div class="average record">
+          <div class="average brightRecord">
             <div class="titleCell">
               <span>AVERAGE</span>
             </div>
-            <div class-"lapCell">
+            <div class="lapCell">
               <span>---</span>
             </div>
             <div class="timeCell">
@@ -108,10 +105,14 @@
             <div class="timeCell">
               <span>88:88.888</span>
             </div>
-            <div class="deltaCell">
-              <span>--:--.--</span>
+            <div class="evenDeltaCell">
+              <span>--:--.---</span>
             </div>
           </div> <!-- average -->
+
+        </div> <!-- topContents -->
+
+        <div class="bottomContents">
 
         </div> <!-- bottomContents -->
 
