Modify overflow in time prototype

--- a/public/prototype/time.html
+++ b/public/prototype/time.html
@@ -59,8 +59,225 @@
             </div>
           </div> <!-- current -->
 
-          <!-- <div class="timeLogTable"> -->
-          <!-- </div> -->
+          <div class="timeLogTable">
+
+            <div>
+              <div class="titleCell">
+                <span>LATEST</span>
+              </div>
+              <div class="lapCell">
+                <span>888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="evenDeltaCell">
+                <span>+88:88.888</span>
+              </div>
+            </div>
+
+            <div>
+              <div class="titleCell">
+                <span></span>
+              </div>
+              <div class="lapCell">
+                <span>888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="evenDeltaCell">
+                <span>+88:88.888</span>
+              </div>
+            </div>
+
+            <div>
+              <div class="titleCell">
+                <span></span>
+              </div>
+              <div class="lapCell">
+                <span>888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="evenDeltaCell">
+                <span>+88:88.888</span>
+              </div>
+            </div>
+
+            <div>
+              <div class="titleCell">
+                <span></span>
+              </div>
+              <div class="lapCell">
+                <span>8</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="evenDeltaCell">
+                <span>88:88.888</span>
+              </div>
+            </div>
+
+            <div>
+              <div class="titleCell">
+                <span></span>
+              </div>
+              <div class="lapCell">
+                <span>888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="evenDeltaCell">
+                <span>+88:88.888</span>
+              </div>
+            </div>
+
+            <div>
+              <div class="titleCell">
+                <span></span>
+              </div>
+              <div class="lapCell">
+                <span>888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="evenDeltaCell">
+                <span>+88:88.888</span>
+              </div>
+            </div>
+
+            <div>
+              <div class="titleCell">
+                <span></span>
+              </div>
+              <div class="lapCell">
+                <span>888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="evenDeltaCell">
+                <span>+88:88.888</span>
+              </div>
+            </div>
+
+            <div>
+              <div class="titleCell">
+                <span></span>
+              </div>
+              <div class="lapCell">
+                <span>888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="evenDeltaCell">
+                <span>+88:88.888</span>
+              </div>
+            </div>
+
+            <div>
+              <div class="titleCell">
+                <span></span>
+              </div>
+              <div class="lapCell">
+                <span>888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="timeCell">
+                <span>88:88.888</span>
+              </div>
+              <div class="evenDeltaCell">
+                <span>+88:88.888</span>
+              </div>
+            </div>
+
+          </div>
 
           <div class="fastest darkRecord">
             <div class="titleCell">
