Add header items on qualifing prototype

--- a/public/prototype/qualifing.html
+++ b/public/prototype/qualifing.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Time</title>
+    <title>Qualifing</title>
     <link rel="stylesheet" href="qualifing.css">
   </head>
   <body>
@@ -10,6 +10,39 @@
       <div class="contents">
 
         <div class="topContents">
+
+          <div class="session">
+            <div class="sessionHeader header">
+              <span>SESSION</span>
+            </div>
+            <div class="sessionValue value">
+              <span>88:88:88.888</span>
+            </div>
+          </div> <!-- session -->
+
+          <div class="position border">
+            <div class="positionHeader header">
+              <span>POSITION</span>
+            </div>
+            <div class="positionValue value">
+              <span>32/32</span>
+            </div>
+          </div> <!-- position -->
+
+          <div class="current border">
+            <div class="currentLap header">
+              <span>CURRENT</span>
+            </div>
+            <div class="currentLapCount lap">
+              <span>888</span>
+            </div>
+            <div class="currentLapTime time">
+              <span>88:88.888</span>
+            </div>
+          </div> <!-- current -->
+
+          <div class=rankTable>
+          </div> <!-- rankTable -->
 
         </div> <!-- topContents -->
 
