Modify Completed damage prototype content

--- a/public/prototype/damage.html
+++ b/public/prototype/damage.html
@@ -14,6 +14,141 @@
           </div> <!-- leftContents -->
 
           <div class="rightContents">
+
+            <div class="carDamage">
+
+              <div class="engineDamage">
+                <div class="header">
+                  <span>ENGINE</span>
+                </div>
+                <div class="border">
+                  <div class="value">
+                    <span>888</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="aeroDamage">
+                <div class="header">
+                  <span>AERO</span>
+                </div>
+                <div class="border">
+                  <div class="value">
+                    <span>88888</span>
+                  </div>
+                </div>
+              </div>
+
+            </div> <!-- carDamage -->
+
+            <div class="tyreDamage">
+
+              <div class="frontTyre">
+
+                <div class="leftTyre">
+                  <div class="header">
+                    <span>LEFT FRONT</span>
+                  </div>
+                  <div>
+                    <div class="brake border">
+                      <div class="icon">
+                        <img src="../src/image/brake-blue.png" />
+                      </div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                    </div>
+                    <div class="suspension border">
+                      <div class="icon">
+                        <img src="../src/image/suspension-blue.png" />
+                      </div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- leftTyre -->
+
+                <div class="rightTyre">
+                  <div class="header">
+                    <span>RIGHT FRONT</span>
+                  </div>
+                  <div>
+                    <div class="brake border">
+                      <div class="icon">
+                        <img src="../src/image/brake-blue.png" />
+                      </div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                    </div>
+                    <div class="suspension border">
+                      <div class="icon">
+                        <img src="../src/image/suspension-blue.png" />
+                      </div>
+                      <div class="value">
+                        <span>888</span>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- rightTyre -->
+
+              </div> <!-- frontTyre -->
+
+              <div class="rearTyre">
+
+                <div class="leftTyre">
+                  <div class="header">
+                    <span>LEFT REAR</span>
+                  </div>
+                  <div>
+                    <div class="brake border">
+                      <div class="icon">
+                        <img src="../src/image/brake-blue.png" />
+                      </div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                    </div>
+                    <div class="suspension border">
+                      <div class="icon">
+                        <img src="../src/image/suspension-blue.png" />
+                      </div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- leftTyre -->
+
+                <div class="rightTyre">
+                  <div class="header">
+                    <span>RIGHT REAR</span>
+                  </div>
+                  <div>
+                    <div class="brake border">
+                      <div class="icon">
+                        <img src="../src/image/brake-blue.png" />
+                      </div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                    </div>
+                    <div class="suspension border">
+                      <div class="icon">
+                        <img src="../src/image/suspension-blue.png" />
+                      </div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- rightTyre -->
+
+              </div> <!-- rearTyre -->
+
+            </div> <!-- tyreDamage -->
+
           </div> <!-- rightContents -->
 
         </div> <!-- topContents -->
