Modify engine prototype layout

--- a/public/prototype/engine.html
+++ b/public/prototype/engine.html
@@ -25,27 +25,27 @@
                 <img src="../src/image/engine.png" />
               </div>
 
-              <div class="values">
+              <div class="valueRecords">
 
-                <div class="valueBox">
+                <div class="valueRecord">
                   <div class="value">
-                    <span>88888</span>
+                    <span>888</span>
                   </div>
                   <div class="unit value">
                     <span>HP</span>
                   </div>
                 </div>
 
-                <div class="valueBox">
+                <div class="valueRecord">
                   <div class="value">
-                    <span>88888</span>
+                    <span>8888</span>
                   </div>
                   <div class="unit value">
                     <span>NM</span>
                   </div>
                 </div>
 
-                <div class="valueBox">
+                <div class="valueRecord">
                   <div class="value">
                     <span>88888</span>
                   </div>
@@ -58,65 +58,194 @@
 
             </div> <!-- engine -->
 
-            <div class="oil">
+            <div class="valueTable">
 
-              <div class="icon">
-                <img src="../src/image/oil.png" />
+              <div class="header">
+                <div>
+                </div>
+                <div>
+                  <span>CURRENT</span>
+                </div>
+                <div>
+                  <span>MIN</span>
+                </div>
+                <div>
+                  <span>MAX</span>
+                </div>
               </div>
 
-              <div class="values">
+              <div class="oil">
 
-                <div class="valueBox">
-                  <div class="value">
-                    <span>8888</span>
-                  </div>
-                  <div class="unit value">
-                    <span>℃</span>
-                  </div>
+                <div class="icon">
+                  <img src="../src/image/oil.png" />
                 </div>
 
-                <div class="valueBox">
-                  <div class="value">
-                    <span>88888</span>
+                <div class="valueRecords">
+
+                  <div class="valueRecord">
+                    <div>
+                      <div class="value">
+                        <span>8888</span>
+                      </div>
+                      <div class="unit">
+                        <span>℃</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                      <div class="unit">
+                        <span>℃</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                      <div class="unit">
+                        <span>℃</span>
+                      </div>
+                    </div>
                   </div>
-                  <div class="unit value">
-                    <span>kPa</span>
+
+                  <div class="valueRecord">
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>kPa</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>kPa</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                      <div class="unit">
+                        <span>kPa</span>
+                      </div>
+                    </div>
                   </div>
+
+                </div> <!-- valueRecords -->
+
+              </div> <!-- oil -->
+
+              <div class="water">
+
+                <div class="icon">
+                  <img src="../src/image/water.png" />
                 </div>
 
-              </div>
+                <div class="valueRecords">
 
-            </div> <!-- oil -->
-
-            <div class="water">
-
-              <div class="icon">
-                <img src="../src/image/water.png" />
-              </div>
-
-              <div class="values">
-
-                <div class="valueBox">
-                  <div class="value">
-                    <span>88</span>
+                  <div class="valueRecord">
+                    <div>
+                      <div class="value">
+                        <span>8888</span>
+                      </div>
+                      <div class="unit">
+                        <span>℃</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>8888</span>
+                      </div>
+                      <div class="unit">
+                        <span>℃</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>℃</span>
+                      </div>
+                    </div>
                   </div>
-                  <div class="unit value">
-                    <span>℃</span>
+
+                  <div class="valueRecord">
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>kPa</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                      <div class="unit">
+                        <span>kPa</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                      <div class="unit">
+                        <span>kPa</span>
+                      </div>
+                    </div>
                   </div>
+
+                </div> <!-- valueRecords -->
+
+              </div> <!-- water -->
+
+              <div class="fuel">
+
+                <div class="icon">
+                  <img src="../src/image/fuel.png" />
                 </div>
 
-                <div class="valueBox">
-                  <div class="value">
-                    <span>888</span>
-                  </div>
-                  <div class="unit value">
-                    <span>kPa</span>
-                  </div>
-                </div>
+                <div class="valueRecords">
 
-              </div>
+                  <div class="valueRecord">
+                    <div>
+                      <div class="value">
+                        <span>8888</span>
+                      </div>
+                      <div class="unit">
+                        <span>kPa</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>kPa</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>kPa</span>
+                      </div>
+                    </div>
+                  </div>
 
-            </div> <!-- water -->
+                </div> <!-- valueRecords -->
+
+              </div> <!-- fuel -->
+
+            </div> <!-- valueTable -->
 
           </div> <!-- rightContents -->
 
