Fix engine prototype style

--- a/public/prototype/engine.html
+++ b/public/prototype/engine.html
@@ -31,7 +31,7 @@
                   <div class="value">
                     <span>888</span>
                   </div>
-                  <div class="unit value">
+                  <div class="unit">
                     <span>HP</span>
                   </div>
                 </div>
@@ -40,7 +40,7 @@
                   <div class="value">
                     <span>8888</span>
                   </div>
-                  <div class="unit value">
+                  <div class="unit">
                     <span>NM</span>
                   </div>
                 </div>
@@ -49,7 +49,7 @@
                   <div class="value">
                     <span>88888</span>
                   </div>
-                  <div class="unit value">
+                  <div class="unit">
                     <span>rad/s</span>
                   </div>
                 </div>
