Modify button for ButtonBox prototype

--- a/public/prototype/buttonBox.html
+++ b/public/prototype/buttonBox.html
@@ -11,11 +11,31 @@
 
         <div class="topContents">
 
-          <button class="button"></button>
+          <label>
+            <input type="checkbox" class="input" />
+            <span class="span"></span>
+          </label>
+          <label>
+            <input type="checkbox" class="input" />
+            <span class="span"></span>
+          </label>
+          <label>
+            <input type="checkbox" class="input" />
+            <span class="span"></span>
+          </label>
 
         </div> <!-- topContents -->
 
         <div class="bottomContents">
+
+          <label>
+            <input type="checkbox" class="input" />
+            <span class="span"></span>
+          </label>
+          <label>
+            <input type="checkbox" class="input" />
+            <span class="span"></span>
+          </label>
 
         </div> <!-- bottomContents -->
 
